--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <div class="post">
             <p class="date">published {{ post.published_date }}</p>
-            <h1><a href="">{{ post.title }}</a></h1>
+            <h1><a href="{% url 'post_detail' post_name=post.route %}">{{ post.title }}</a></h1>
             <p>{{ post.text|read_markdown|safe }}</p>
         </div>
     {% endfor %}
