--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,14 +1,19 @@
 {% extends 'blog/base.html' %}
 {% load markdown_filter %}
 
-{%  block content %}
-<div class="post">
-    {% if post.published_date %}
-        <div class="date">
-            {{ post.published_date }}
-        </div>
-    {% endif %}
-    <h1>{{ post.title }}</h1>
-    <p>{{ post.text|read_markdown|safe }}</p>
-</div>
+{% block content %}
+    <div class="post">
+        {% if user.is_authenticated %}
+            <a class="btn btn-default" href="{% url 'post_edit' post_name=post.route %}">
+                <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+        {% endif %}
+        {% if post.published_date %}
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+        {% endif %}
+        <h1>{{ post.title }}</h1>
+        <p>{{ post.text|read_markdown|safe }}</p>
+    </div>
 {% endblock %}
