--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -4,9 +4,9 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <p class="date">published: {{ post.published_date|date:'d-m-Y' }}</p>
+            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
             <h1><a href="{% url 'post_detail' post_name=post.route %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|read_markdown|safe }}</p>
+            <p>{{ post.text|truncatechars:200|read_markdown|safe }}</p>
         </div>
     {% endfor %}
 {% endblock %}
