--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,7 @@
             <p class="date">published: {{ post.published_date|date:'d-m-Y' }}</p>
             <h1><a href="{% url 'post_detail' post_name=post.route %}">{{ post.title }}</a></h1>
             <p>{{ post.text|read_markdown|safe }}</p>
+            <a href="{% url 'post_detail' post_name=post.route %}">Comments: {{ post.approved_comments.count }}</a>
         </div>
     {% endfor %}
 {% endblock %}
